--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@glidejs/glide": "^3.4.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "css-mqpacker": "^7.0.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
     "sass-loader": "^8.0.2"
@@ -34,6 +35,7 @@
     "imagesloaded": "^4.1.4",
     "jquery": "^3.4.1",
     "masonry-layout": "^4.2.2",
+    "nuxt-purgecss": "^0.2.1",
     "prettier": "^1.19.1",
     "vue-carousel": "^0.18.0",
     "vue-masonry": "^0.11.8",
