--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nuxt-purgecss": "^0.2.1",
     "prettier": "^1.19.1",
     "qs": "^6.9.1",
+    "vee-validate": "^3.2.4",
     "vue-carousel": "^0.18.0",
     "vue-masonry": "^0.11.8",
     "vue-masonry-css": "^1.0.3",
