--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@glidejs/glide": "^3.4.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "blueimp-md5": "^2.12.0",
     "css-mqpacker": "^7.0.0",
     "marked": "^0.8.0",
     "node-sass": "^4.13.1",
