--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "imagesloaded": "^4.1.4",
     "jquery": "^3.4.1",
     "masonry-layout": "^4.2.2",
+    "nuxt-payload-extractor": "^0.0.14",
     "nuxt-purgecss": "^0.2.1",
     "prettier": "^1.19.1",
     "qs": "^6.9.1",
