--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "marked": "^0.8.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
+    "nuxt-client-init-module": "^0.1.8",
     "sass-loader": "^8.0.2"
   },
   "devDependencies": {
@@ -38,7 +39,6 @@
     "imagesloaded": "^4.1.4",
     "jquery": "^3.4.1",
     "masonry-layout": "^4.2.2",
-    "nuxt-payload-extractor": "^0.0.14",
     "nuxt-purgecss": "^0.2.1",
     "prettier": "^1.19.1",
     "qs": "^6.9.1",
