--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
     "nuxt-client-init-module": "^0.1.8",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-cool-lightbox": "^1.0.13"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
