--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "blueimp-md5": "^2.12.0",
     "css-mqpacker": "^7.0.0",
+    "luxon": "^1.22.0",
     "marked": "^0.8.0",
+    "nl2br": "^0.0.3",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
     "nuxt-client-init-module": "^0.1.8",
     "sass-loader": "^8.0.2",
-    "vue-cool-lightbox": "^1.0.13"
+    "vue-cool-lightbox": "^1.0.13",
+    "vue-datetime": "^1.0.0-beta.11",
+    "weekstart": "^1.0.1"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
