--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-mqpacker": "^7.0.0",
     "luxon": "^1.22.0",
     "marked": "^0.8.0",
+    "moment": "^2.24.0",
     "nl2br": "^0.0.3",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
