--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass-loader": "^8.0.2",
     "vue-cool-lightbox": "^1.0.13",
     "vue-datetime": "^1.0.0-beta.11",
+    "vue-lazyload": "^1.3.3",
     "weekstart": "^1.0.1"
   },
   "devDependencies": {
