--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "marked": "^0.8.0",
     "moment": "^2.24.0",
     "nl2br": "^0.0.3",
-    "node-sass": "^4.13.1",
-    "nuxt": "^2.0.0",
+    "node-sass": "^8.0.0",
+    "nuxt": "^2.16.0",
     "nuxt-client-init-module": "^0.1.8",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.0.0",
     "vue-cool-lightbox": "^1.0.13",
     "vue-datetime": "^1.0.0-beta.11",
     "vue-lazyload": "^1.3.3",
@@ -37,7 +37,7 @@
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/fontawesome": "^1.1.1",
-    "@nuxtjs/tailwindcss": "^1.3.2",
+    "@nuxtjs/tailwindcss": "^6.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.10.0",
@@ -46,7 +46,8 @@
     "imagesloaded": "^4.1.4",
     "jquery": "^3.4.1",
     "masonry-layout": "^4.2.2",
-    "nuxt-purgecss": "^0.2.1",
+    "nuxt-purgecss": "^1.0.0",
+    "postcss": "^8.4.32",
     "prettier": "^1.19.1",
     "qs": "^6.9.1",
     "vee-validate": "^3.2.4",
